# AvatarOS

./: .dockerignore  .gitignore  LICENSE  README.md  README_ZH.md  ROADMAP.md
server/: .env.example  .gitignore  Dockerfile.sandbox  alembic.ini  config.yaml.example  main.py  pyproject.toml  requirements.txt
server/app/api/: __init__.py  approval.py  artifacts.py  cost.py  health.py  history.py  knowledge.py  maintenance.py  memory.py  metrics_api.py  role_management.py  schedule.py  settings.py  state.py  task_scheduler_api.py  task_session.py  workflow.py  workspace.py
server/app/config/: durable_state_config.py
server/app/core/: __init__.py  auth.py  bootstrap.py  config.py  dependencies.py  logging_config.py  resilience.py  user_config.py
server/app/crud/: workflow.py
server/app/db/: __init__.py  artifact_record.py  artifact_registry_record.py  cost_record.py  database.py  file_artifact.py  knowledge_models.py  long_task_models.py  serialization.py  system.py  workflow.py
server/app/intent_router/: classifier.py  interpreter.py  logging.py  param_extractor.py  prompt.py  router.py  types.py
server/app/io/: manager.py
server/app/llm/: __init__.py  base.py  config.py  factory.py  logging.py  types.py
server/app/log/: __init__.py  aggregator.py  socket_handler.py  structured.py
server/app/router/: __init__.py  prompt.py  router.py
server/app/services/: __init__.py  approval_service.py  gc_service.py  (+14 more)
server/config/: graph_runtime.yaml  security.yaml
server/migrations/: env.py
server/scripts/: download_embedding_model.py  test_artifact_history.py
(+861 files in other folders)
